Turned  features section into a flex box to  fix alignment
Added to mobile media query to fix width of projects due to update to flex in mobile view.

--- a/styles.css
+++ b/styles.css
@@ -165,17 +165,13 @@ nav a {
 }
 
 .features-wrapper {
-  min-height: 450px;
-  display: flex; 
-  align-items: center;
-  justify-content: space-around;
-  max-width: 1100px;
-  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .feature-column {
   padding: 10px 20px;
-  width: 80%;
+  width: 50%;
   text-align: center;
   /* height: 300px; */
   display: flex;
@@ -226,7 +222,6 @@ footer span {
 
 /* MAKE IT RESPONSIVE */
 @media only screen and (max-width: 600px) {
-
   .menu{
     width: 100%;
     max-height: 0;
@@ -262,7 +257,14 @@ footer span {
 
   .features-wrapper {
     flex-direction: column;
+    align-items: center;
   }
+
+  .feature-column {
+    width: 90%;
+  }
+
+
 .profile-text,
 .skill-text,
 .ed-text,
